fix signup overflow

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -80,6 +80,7 @@
     margin-top: 10px;
     text-align: center;
     width: 93%;
+    margin-top: 20px;
     }
 
     .bg-orange  { background: var(--c-orange); }
