--- a/src/css/form.scss
+++ b/src/css/form.scss
@@ -13,7 +13,9 @@
    margin-left: -25px;
    padding-right: 15px;
   height:670px;
-
+    }
+    @include respond(tinyPhone) {
+      height: 750px;
     }
   margin-left: auto;
   margin-right: auto;
