--- a/src/css/layout.scss
+++ b/src/css/layout.scss
@@ -76,7 +76,7 @@ align-items: center; /* align vertical */
 
 }
 #about {
-  padding: 5em 0;
+  padding: 2.5em 0;
   background-color: var(--c-bg-secondary);
   // background: linear-gradient(90grad, var(--c-bg-secondary), rgb(206, 218, 238));
   border-top: 2px dashed var(--c-grey);
@@ -84,7 +84,7 @@ align-items: center; /* align vertical */
 }
 
 #how-we-can-help {
-  padding: 5em 0;
+  padding: 2.5em 0;
   border-bottom: 2px dashed var(--c-grey);
 
  
@@ -96,7 +96,7 @@ align-items: center; /* align vertical */
 
 #sign-up {
   min-height: 30em;
-  padding: 5em 0;
+  padding: 2.5em 0;
   background-color: var(--c-bg-secondary);
 }
 
